src/objects/Leaderoutreach__c.object
<CustomObject>
    <fields>
        <fullName>Answer1__c</fullName>
        <label>Answer1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer2__c</fullName>
        <label>Answer2</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer3__c</fullName>
        <label>Answer3</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmpId__c</fullName>
        <label>EmpId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaderFirstName__c</fullName>
        <label>LeaderFirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaderLastName__c</fullName>
        <label>LeaderLastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCellPhone__c</fullName>
        <label>MemberCellPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MemberDepartment__c</fullName>
        <label>MemberDepartment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberEmail__c</fullName>
        <label>MemberEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MemberEmployeeId__c</fullName>
        <label>MemberEmployeeId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberFirstName__c</fullName>
        <label>MemberFirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberLastName__c</fullName>
        <label>MemberLastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>LeaderOutreach</label>
    <nameField>
        <label>Leaderoutreach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeaderOutreach</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>